# ReinWeb

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: fineweb.yaml  reinweb.yaml
scripts/: analyze_datatrove_logs.py  calculate_heuristics.py  extract_dpc.py  reinweb.py  upload.py
src/rein/: reinweb_bad_words_filter.py  reinweb_lines_formatter.py  reinweb_quality_filter.py  utils.py
